--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-fastapi
-uvicorn
-pytesseract
-pdf2image
-requests
+fastapi==0.115.0
+uvicorn[standard]==0.30.6
+httpx==0.27.0
+pdf2image==1.17.0
+pillow==10.4.0
+pytesseract==0.3.13
+pydantic==2.9.2
