--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,5 @@
 fastapi==0.115.0
-uvicorn[standard]==0.30.6
+uvicorn==0.30.6
 httpx==0.27.2
-pdf2image==1.17.0
-pillow==10.4.0
-pytesseract==0.3.13
-pydantic==2.9.2
-rapidfuzz==3.9.6
-pymupdf==1.24.9
-pdfminer.six==20231228
+PyMuPDF==1.24.9
 regex==2024.9.11
