--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 fastapi==0.115.0
-uvicorn==0.30.6
+uvicorn[standard]==0.30.6
 httpx==0.27.2
-h2==4.1.0
-PyMuPDF==1.24.9
-pdfminer.six==20231228
+pymupdf==1.24.9
 regex==2024.9.11
+rapidfuzz==3.9.6
