--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
 fastapi==0.115.0
 uvicorn[standard]==0.30.6
-httpx==0.27.2
+httpx[http2]==0.27.2
+
 pymupdf==1.24.9
+pdf2image==1.17.0
+pillow==10.4.0
+
+pytesseract==0.3.13
 regex==2024.9.11
 rapidfuzz==3.9.6
