--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 fastapi==0.115.0
 uvicorn[standard]==0.30.6
-httpx[http2]==0.27.2
+httpx==0.27.2
+requests==2.31.0
 pdf2image==1.17.0
 pillow==10.4.0
 pytesseract==0.3.13
 pydantic==2.9.2
-rapidfuzz==3.9.6
 pymupdf==1.24.9
+pdfminer.six==20231228
 regex==2024.9.11
+unicodedata2==0.6.4
