--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,5 @@
-fastapi==0.115.0
-uvicorn[standard]==0.30.6
-requests==2.31.0
+flask==3.0.3
+requests==2.32.3
 pytesseract==0.3.13
-pdf2image==1.17.0
-pymupdf==1.24.9
-regex==2024.9.11
-unicodedata2==23.3.0
-pydantic==2.9.2
-statistics==1.0.3.5
-httpx==0.27.2
-pillow==10.4.0
-pdfminer.six==20231228
-rapidfuzz==3.9.6
+Pillow==10.4.0
+PyMuPDF==1.24.10
