--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 fastapi==0.115.5
-uvicorn[standard]==0.32.1
-requests==2.32.3
+uvicorn==0.32.1
+gunicorn==22.0.0
+pymupdf==1.24.9
 pillow==10.4.0
 pdf2image==1.17.0
 pytesseract==0.3.13
+httpx==0.27.2
+python-multipart==0.0.12
