--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
-fastapi==0.115.5
-uvicorn==0.32.1
+Flask==3.0.3
 gunicorn==22.0.0
-pymupdf==1.24.9
-pillow==10.4.0
-pdf2image==1.17.0
+requests==2.32.3
+Pillow==10.4.0
+PyMuPDF==1.24.9
 pytesseract==0.3.13
-httpx==0.27.2
-python-multipart==0.0.12
