--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,5 @@ requests==2.32.3
 Pillow==10.4.0
 PyMuPDF==1.24.9
 cloudscraper==1.2.71
+pytesseract==0.3.13
 gunicorn==21.2.0
-pdfminer.six==20231228
